[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button1" type="Button" parent="."]
margin_left = 132.0
margin_top = 273.0
margin_right = 272.0
margin_bottom = 342.0
text = "Salve"

[node name="Button2" type="Button" parent="."]
margin_left = 456.0
margin_top = 384.0
margin_right = 596.0
margin_bottom = 453.0
text = "envia "

[node name="Button3" type="Button" parent="."]
margin_left = 745.0
margin_top = 267.0
margin_right = 885.0
margin_bottom = 336.0
text = "deu math ? "

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 422.0
margin_top = 223.0
margin_right = 611.0
margin_bottom = 275.0

[node name="Label" type="Label" parent="LineEdit"]
margin_left = 6.0
margin_top = -19.0
margin_right = 130.0
text = "Digite número:"

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 391.0
margin_top = 303.0
margin_right = 652.0
margin_bottom = 349.0

[node name="Label2" type="Label" parent="LineEdit2"]
margin_left = 4.0
margin_top = -17.0
margin_right = 139.0
margin_bottom = 2.0
text = "Digite qualuer nome:"

[node name="Label" type="Label" parent="."]
margin_left = 119.0
margin_top = 50.0
margin_right = 930.0
margin_bottom = 115.0
text = "Será se seu nome é legal ? 
Pensa em um numero, se der sorte, seu nome vai ser muito legal escrito baldo, se não for tão super cool vai ser só seu nome.

Um beijo da Anitta"

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
